--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest # Chạy trên Windows
+    runs-on: windows-latest
 
     steps:
       - name: Checkout code
@@ -21,11 +21,8 @@ jobs:
         with:
           java-version: '17'
 
-      - name: Change Directory
-        run: cd selenium_testing # Chuyển đến thư mục dự án
-
       - name: Build with Maven
-        run: mvn clean install
+        run: mvn clean install # Xây dựng dự án Maven
 
       - name: Run Selenium Tests
         run: mvn test -DsuiteXmlFile=testng.xml # Chạy bài kiểm thử với TestNG
